Minor changes to console api docs (#659)
* Update console.mdx

In the Delete Label call, device_id is a path parameter, not a body parameter. 
ln Add Device to Label, changed 'label' parameter to 'label_id' for consistency.

* Update console.mdx

Parameter name is in fact 'label' (as in the original docs), not 'label_id'

* Update console.mdx

updated result of deleting label

* delete label response swapped with search by name

* formatted with .prettierrc

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -531,7 +531,7 @@ Delete a device label, along with all of its device links.
   values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
 <TabItem value="request">
 
-_Body Parameters_
+_Path Parameters_
 
 | Parameter Name      | Type     | Description                              |
 | ------------------- | -------- | ---------------------------------------- |
@@ -543,10 +543,7 @@ _Body Parameters_
 200: OK
 
 ```json
-Label {
-    id: "868ea783-f252-4fc4-b724-a155680c0bc9",
-    name: "Blue Label",
-}
+Label deleted
 ```
 
 404: Not Found
