--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -124,6 +124,32 @@ MAGIC_SECRET_KEY=sk_live_XXXXXXXXXXXXXXXX
 You may get these from your [Magic Link dashboard](https://dashboard.magic.link/app/all_apps)
 upon selecting your app.
 
+#### Customize Console Branding (staging)
+
+Console Providers can customize their instance of Console UI including the ability to swap out images/logos, email content, and change footer links. 
+
+To customize your open source Console:
+
+Copy `app-config.json` into config folder
+
+```bash
+cp templates/app-config.json config/app-config.json
+```
+
+Customize `config/app-config.json` as needed.
+
+:::important
+
+If you choose to customize your version of Console you need to build from source or your customizations will be overwritten. 
+
+:::
+
+To switch to building your own Console instead of using the quay image:
+
+```bash
+cp templates/docker-compose-server.yaml docker-compose.yaml
+```
+
 ### Customize Router environment
 
 We will do something similar for `.env-router`:
