--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -50,9 +50,55 @@ the `My Devices Heard` tab.
 
 Clicking any device name takes users to the specific device page for more details.
 
+## Create Hotspot Aliases
+
+Coverage allows users to easily create an alias for easier identification of the Hotspot. Click a
+Hotspot name, then under its animal name, click `No Alias` to define an Alias.
+
 ## Creating Hotspot Aliases
 
 Coverage allows users to easily create an alias for easier identification of the Hotspot. Click a
 Hotspot name, then under its animal name, click `No Alias` to define an Alias.
 
 <img src={useBaseUrl('img/use-the-network/console/coverage-alias.png')} />
+
+## Group Hotspots
+
+The Coverage feature allows users to create Hotspot groups for easy management. To be added to a
+group, Hotspots must initially be followed and appear in the My Hotspots area. To add Hotspots to
+`My Hotspot` list check
+[here](https://docs.helium.com/use-the-network/console/coverage/#identify-hotspots-that-hear-devices).
+
+### Creating a Hotspot group
+
+- On the left-hand menu, choose **Coverage**.
+- Under `My Hotspot Groups`, click **+ Create Hotspot Group**, and enter the group name (minimum 3
+  characters).
+
+### Adding a Hotspot to a group
+
+Before a Hotspot can be added to a group it must be followed and appear in the `My Hotspots` list.
+
+- Under `My Hotspots`, select the desired Hotspot row, and under the `Groups` column click and
+  choose the name of the desired Group to add the Hotspot. Note: Hotspots can belong in multiple
+  groups.
+
+### Removing a Hotspot from a group
+
+A Hotspot can easily be removed from a group. Note: this action only removes the Hotspot from the
+group, and it will continue to appear in the `My Hotspots` list.
+
+- Under `My Hotspots Group`, click the Group that includes the Hotspot(s) you want to remove.
+- Select the row of the Hotspot to remove and under the `Groups` column click the blue check next to
+  the group name. The Hotspot is removed from the group. Note: Hotspots can belong in multiple
+  groups.
+
+### Modifying groups
+
+Groups can be renamed or deleted.
+
+- Under `My Hotspots Group`, click the Group you want to:
+  - Rename: Click **Rename Hotspot Group**, type the name, and click **Submit**.
+  - Delete: Click **Delete Hotspot Group**. A confirmation message appears with Hotspots in the
+    group. Click **Submit** to delete the group. Note: Hotspots in a deleted group will continue to
+    appear in the `My Hotspots` list, and this action only deletes the group.
