discord channel links open in discord app
clean pass at discord link updates generated by @Siddhart in PR #772

--- a/docs/mine-hnt/data-only-guides/kerlink.mdx
+++ b/docs/mine-hnt/data-only-guides/kerlink.mdx
@@ -17,8 +17,9 @@ OPKG, however not directly.
 Kerlink Gateways will only mine HNT through packet transfer, and is considered a Data Only Hotspot
 unless you purchase a Kerlink Miner specificlly designed for the Helium Network. The ability to mine
 HNT with anything other than [Approved Hotspots](https://helium.com/mine) is not currently
-supported. Please join the [#gateway-development](https://discord.gg/helium) channel in the Helium
-Discord Server for the latest updates.
+supported. Please join the
+[#gateway-development](discord://discord.com/channels/404106811252408320/784462269072277576) channel
+in the Helium Discord Server for the latest updates.
 
 :::
 
