--- a/docs/mine-hnt/validators/testnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/testnet/deployment-guide.mdx
@@ -313,8 +313,9 @@ email or other methods.
 :::info
 
 If you choose to not run Watchtower for automatic updates of the Docker image during Testnet, please
-watch and respond to upgrade requests on the `#validators-announcements` channel on the
-[Helium Discord](https://discord.gg/helium) server in a timely manner.
+watch and respond to upgrade requests on the
+[#validators-announcements](discord://discord.com/channels/404106811252408320/816788105511305236)
+channel on the [Helium Discord](https://discord.gg/helium) server in a timely manner.
 
 :::
 
