--- a/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-roadmap.mdx
@@ -136,4 +136,5 @@ As with all parts of the Helium project, we look to the community to develop use
 feedback, and define new features. Get involved in the Mappers project:
 
 - [Mappers Project GitHub](https://github.com/helium/mappers/)
-- [Helium Community Discord](https://discord.gg/helium) - `#mappers` channel.
+- [Helium Community Discord](https://discord.gg/helium) -
+  [#mappers](discord://discord.com/channels/404106811252408320/730801390431240228) channel.
