--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -41,8 +41,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 :::info
 
 [Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the
-community. And the `#console` and `#sensor-dev` channels are the two most relevant for developers
-using the Network.
+community. And the [#console](discord://discord.com/channels/404106811252408320/730245319882965093)
+and [#sensor-dev](discord://discord.com/channels/404106811252408320/730246602861838467) channels are
+the two most relevant for developers using the Network.
 
 :::
 
