--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -13,7 +13,8 @@ you're starting from scratch. At the end, you'll have a Helium Validator deploye
 :::info
 
 If at any point during this process you need assistance or have general questions, please join the
-`#validator` channel on [Helium Discord](https://discord.gg/helium).
+[#validator](discord://discord.com/channels/404106811252408320/857353417739730954) channel on
+[Helium Discord](https://discord.gg/helium).
 
 :::
 
