--- a/docs/mine-hnt/validators/testnet/expectations.mdx
+++ b/docs/mine-hnt/validators/testnet/expectations.mdx
@@ -14,10 +14,14 @@ during the Testnet process.
 In participating in Testnet, the expectations are that you will:
 
 - Join the [Helium Discord](https://discord.gg/helium) server to take part in the real-time
-  Validator development. Participate in the `#validator` channel, but more importantly subscribe to
-  alerts in `#validators-announcements`. `#validators-announcements` will provide you with
-  important, timely information for upgrades and feedback during this process.
-- Be attentive to upgrade the Validator software when requested through `#validators-announcements`.
+  Validator development. Participate in the
+  [#validator](discord://discord.com/channels/404106811252408320/857353417739730954) channel, but
+  more importantly subscribe to alerts in
+  [#validators-announcements](discord://discord.com/channels/404106811252408320/816788105511305236).
+  [#validators-announcements](discord://discord.com/channels/404106811252408320/816788105511305236)
+  will provide you with important, timely information for upgrades and feedback during this process.
+- Be attentive to upgrade the Validator software when requested through
+  [#validators-announcements](discord://discord.com/channels/404106811252408320/816788105511305236).
   This may include tasks that will require you to delete & re-stake your Validator instance, or
   perform other tasks that will assist the team in bringing the best product to the network.
 - Be proficient in command-line driven linux-based operating systems, comfortable working with cloud
