--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -14,8 +14,9 @@ also assumed that you've added `alias miner='docker exec validator miner'` to `~
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-There is a `#validator` [Discord](https://discord.gg/helium) channel available to reach other
-validator participants. Also use this channel to share feedback and report issues.
+There is a [#validator](discord://discord.com/channels/404106811252408320/857353417739730954)
+[Discord](https://discord.gg/helium) channel available to reach other validator participants. Also
+use this channel to share feedback and report issues.
 
 ## Confirm you are running the latest Validator version
 
