--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -44,7 +44,7 @@ aims to help resolve any issues you may have.
 :::info
 
 If none of the below fixes your Hotspot connection, please visit the Helium Community Discord,
-#hotspot-setup-help.
+[#hotspot-issues](discord://discord.com/channels/404106811252408320/813976183519445084).
 
 :::
 
