--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -21,7 +21,8 @@ Helium.
 > fly a GPS tracker on a balloon or aircraft, please do not contribute this data to the coverage
 > map.
 
-Be sure to check out the ongoing conversation in the dedicated `#mappers` channel on the
+Be sure to check out the ongoing conversation in the dedicated
+[#mappers](discord://discord.com/channels/404106811252408320/730801390431240228) channel on the
 [Helium Discord Server](https://discord.gg/helium).
 
 ## Mapping Projects
