--- a/docs/use-the-network/run-a-network-server/deploy-console.mdx
+++ b/docs/use-the-network/run-a-network-server/deploy-console.mdx
@@ -7,7 +7,8 @@ slug: /use-the-network/run-a-network-server/deploy-console
 # Deploying Console
 
 Getting [Console](https://github.com/helium/console) deployed is very similar to
-[running Console](/use-the-network/run-console). Go ahead and follow that guide up to **Run it!**.
+[running Console](/use-the-network/run-a-network-server/run-console/). Go ahead and follow that
+guide up to **Run it!**.
 
 ## Encryption
 
