updated heltec board manager link, issue-816

--- a/docs/use-the-network/devices/development/heltec/wifi-lora-32-v2/arduino.mdx
+++ b/docs/use-the-network/devices/development/heltec/wifi-lora-32-v2/arduino.mdx
@@ -85,8 +85,16 @@ To install, open your Arduino IDE:
 1. Add this URL in the text box:
 
 ```text
-http://resource.heltec.cn/download/package_heltec_esp32_index.json
+https://github.com/Heltec-Aaron-Lee/WiFi_Kit_series/releases/download/0.0.5/package_heltec_esp32_index.json
 ```
+
+:::note
+
+The latest versions can be found on
+[Heltec Automation Docs](https://heltec-automation-docs.readthedocs.io/en/latest/esp32%2Barduino/quick_start.html#via-arduino-board-manager)
+website.
+
+:::
 
 1. Close the Preferences windows
 
