added link to ubidots user guide

--- a/docs/use-the-network/console/integrations/ubidots.mdx
+++ b/docs/use-the-network/console/integrations/ubidots.mdx
@@ -12,6 +12,13 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 applications without having to write code or hire a software development team. You can sign up for a
 free account at [https://ubidots.com](https://ubidots.com/).
 
+:::tip
+
+Additional information can be found on the Ubidots user guide to
+[Connect Helium with Ubidots](https://help.ubidots.com/en/articles/5008195-plugins-connect-helium-with-ubidots)
+
+:::
+
 To get started, log in to your Ubidots account and select **Plugins** from the **Devices** dropdown
 menu at the top of your screen:
 
