--- a/docs/use-the-network/console-marketplace/console-marketplace.mdx
+++ b/docs/use-the-network/console-marketplace/console-marketplace.mdx
@@ -26,7 +26,7 @@ Marketplace participants:
   Console UI.
 - Console users: decide which Console components to use.
 
-Follow the instructions to submit a Marketplace Integration or Decoder pull request to the Helium Console github [repository](https://github.com/helium/console) for consideration by the Helium Foundation:
+Follow the instructions to submit a Marketplace Integration or Decoder pull request to the Helium Console github [repository](https://github.com/helium/console) for consideration by the Helium Foundation.
 
 ## Create a Marketplace Integration 
 
@@ -63,58 +63,52 @@ More info about Integrations [here](/use-the-network/console/integrations).
 
 ## Create a Marketplace Decoder Function (staging)
 
-Decide on your format name. Make sure it is written in lower case (ex. ```super_decoder```).
+- Decide on your format name. Make sure it is written in lower case (ex. ```super_decoder```).
 
-Add image assets for icons. Icons should be square and in png or svg format. Place image assets in ```/assets/img/functions/community``` folder and follow naming conventions.
+- Add image assets for icons. Icons should be square and in png or svg format. Place image assets in ```/assets/img/functions/community``` folder and follow naming conventions.
 
-Add new function format (ex. ```super_decoder```) to ```@all_formats``` in ```/lib/console/functions/function.ex```
+- Add new function format (ex. ```super_decoder```) to ```@all_formats``` in ```/lib/console/functions/function.ex```
 
-Import image assets and add new function entry to ```COMMUNITY_FUNCTION_FORMATS``` in ```/assets/js/util/functionInfo.js```. Make sure the format value of the entry matches (ex. ```super_decoder```).
+- Import image assets and add new function entry to ```COMMUNITY_FUNCTION_FORMATS``` in ```/assets/js/util/functionInfo.js```. Make sure the format value of the entry matches (ex. ```super_decoder```).
 
-Create a new file in ```/community_functions``` with your function body written in javascript.
+- Create a new file in ```/community_functions``` with your function body written in javascript.
 
-Create an ```@variable``` for your function body and add a case for your function in the ```inject_body()``` method in ```/lib/console/community/community_functions.ex```
+- Create an ```@variable``` for your function body and add a case for your function in the ```inject_body()``` method in ```/lib/console/community/community_functions.ex```
 
 More info about Decoder Functions [here](/use-the-network/console/functions).
 
-## Enable Marketplace Functions (For Console Hosting Providers)
-
-Console Hosting Providers can choose which Functions are enabled for users by making the following configuration settings. 
-
-More information about becoming a Console Hosting Provider [here](/use-the-network/run-a-network-server). 
-
-
 ## Enable Marketplace Integrations or Decoder Functions (For Console Hosting Providers)
+
+Console Hosting Providers can choose which Integrations or Decoder Functions are available for their users.
+More information about becoming a Console Hosting Provider [here](/use-the-network/run-a-network-server). 
 
 :::warning
 
-An Integration must be enabled for devices to transfer data through it and a Decoder must be enabled to decode packets. For example, if an existing Integration is disabled, any devices will no longer be able to transfer data via that Integration.
+An Integration must be available for devices to transfer data through it and a Decoder must be available to decode packets. For example, if an existing Integration is disabled, any devices will no longer be able to transfer data via that Integration.
 
 :::
 
 ### Choosing Approved Integrations
 
-Console Hosting Providers can choose which Integrations are enabled for users by making the following configuration settings. 
-
-More information about becoming a Console Hosting Provider
-[here](/use-the-network/run-a-network-server).
+Choose which Integrations are available for users by making the following configuration settings. 
 
 Set `ALLOWED_INTEGRATIONS` .env variable to toggle desired integrations.
 
-- To enable all reviewed integrations (default): `ALLOWED_INTEGRATIONS=all`.
+- To choose all reviewed integrations (default): `ALLOWED_INTEGRATIONS=all`.
 
-- To enable selected integrations: `ALLOWED_INTEGRATIONS=<integrations>`. For example, to enable the
+- To choose selected integrations: `ALLOWED_INTEGRATIONS=<integrations>`. For example, to choose the
   following integrations: HTTP, MQTT, CARGO: `ALLOWED_INTEGRATIONS=http,mqtt,cargo`
 
 Integration keys can be found in ```/lib/console/channels/channel.ex``` listed in ```@long_type_names```.
 
 ### Choosing Approved Decoder Functions (staging)
 
-Console Hosting Providers can choose which Decoder Functions are enabled for users by making the following configuration settings. 
+Choose which Decoder Functions are available for users by making the following configuration settings. 
 
 Set ```ALLOWED_FUNCTIONS``` .env variable to toggle desired functions.
 
-To enable all reviewed functions (default): ```ALLOWED_FUNCTIONS=all```.
-To enable selected integrations: ```ALLOWED_FUNCTIONS=<functions>```. For example, to enable the following functions: CUSTOM, CAYENNE: ```ALLOWED_FUNCTIONS=custom,cayenne```
+- To choose all reviewed decoder functions (default): ```ALLOWED_FUNCTIONS=all```.
+
+- To choose selected decoder functions: ```ALLOWED_FUNCTIONS=<functions>```. For example, to choose the following functions: CUSTOM, CAYENNE: ```ALLOWED_FUNCTIONS=custom,cayenne```
 
 Function keys can be found in ```/lib/console/functions/function.ex``` listed in ```@all_formats```
