note on transaction units, bones to HNT conversion ratio

--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -956,6 +956,13 @@ _Query Parameters_
 
 200: OK
 
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
+
 ```json
 {
   "data": [
@@ -1150,6 +1157,13 @@ _Query Parameters_
 200: OK
 
 A single pending transaction for a given account
+
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
 
 ```json
 {
