--- a/docs/api/blockchain/blocks.mdx
+++ b/docs/api/blockchain/blocks.mdx
@@ -339,6 +339,13 @@ _Query Parameters_
 
 200: OK
 
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
+
 ```json
 {
   "data": [
@@ -652,6 +659,13 @@ _Query Parameters_
 <TabItem value="response">
 
 200: OK
+
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
 
 ```json
 {
