--- a/docs/api/blockchain/challenges.mdx
+++ b/docs/api/blockchain/challenges.mdx
@@ -45,6 +45,13 @@ _Query Parameters_
 
 Return a page of `challenge_receipts` transactions.
 
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
+
 ```json
 {
   "data": [
