--- a/docs/api/blockchain/oracle-prices.mdx
+++ b/docs/api/blockchain/oracle-prices.mdx
@@ -216,6 +216,13 @@ _Path Parameters_
 
 200: OK
 
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
+
 ```json
 {
   "cursor": "eyJ0eXBlcyI6InByaWNlX29yYWNsZV92MSIsImJsb2NrIjozNzc5MDAsImFuY2hvcl9ibG9jayI6Mzc3OTAwfQ",
@@ -272,6 +279,13 @@ _Query Parameters_
 <TabItem value="response">
 
 200: OK
+
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
 
 ```json
 {
