--- a/docs/api/blockchain/pending-transactions.mdx
+++ b/docs/api/blockchain/pending-transactions.mdx
@@ -39,6 +39,13 @@ _Path Parameters_
 
 A successful pending transaction status request
 
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
+
 ```json
 {
   "data": [
