--- a/docs/api/blockchain/transactions.mdx
+++ b/docs/api/blockchain/transactions.mdx
@@ -38,6 +38,13 @@ _Path Parameters_
 
 Transaction successfully retrieved.
 
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
+
 ```json
 {
   "data": {
