--- a/docs/api/blockchain/assert-locations.mdx
+++ b/docs/api/blockchain/assert-locations.mdx
@@ -43,6 +43,13 @@ _Query Parameters_
 
 Return a page of `assert_location` transactions.
 
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
+
 ```json
 {
   "data": [
