--- a/docs/api/blockchain/dc-burns.mdx
+++ b/docs/api/blockchain/dc-burns.mdx
@@ -52,6 +52,13 @@ _Query Parameters_
 
 Return the last 3 hours of burns bucketed by hour
 
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
+
 ```json
 {
   "data": [
@@ -112,6 +119,13 @@ _No Parameters_
 200: OK
 
 Return the current DC burn stats
+
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
 
 ```json
 {
@@ -183,6 +197,13 @@ _Query Parameters_
 200: OK
 
 Return a page of DC burns. Only a segment of the returned list is shown here.
+
+:::note Transaction Units
+
+Remember that transaction units are in `bones`. Read more
+[here](/api/blockchain/introduction/#transaction-units)
+
+:::
 
 ```json
 {
