--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -64,7 +64,7 @@ request more data.
 
 ## Transaction Units
 
-All API endpoints which return a transaction value (i.e. `fee`, `amount`) are represented in the
-base unit `bones`.
+All API endpoints which return a transaction value (i.e. `fee`, `amount`, etc) are represented in
+the base unit `bones`.
 
 The conversion rate is `100,000,000 bone` per `HNT`.
