5g on Helium Docs initial commit

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -27,10 +27,28 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 </div>
 <div class="container" style={{padding: 0}}>
-
 <hr />
 </div>
-<div class="container" style={{padding: 0}}>
+
+<div class="container" style={{ padding: 0 }}>
+  <div class="row">
+    <div class="col col--12">
+      <h2>5G MOBILE Mining</h2>
+    </div>
+    <div class="col col--12">
+      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/5gheader-comingsoon.png')} />
+    </div>
+    <div class="col col--12">
+      <p>5G MOBILE mining announced at Consensus. More details coming soon. </p>
+    </div>
+  </div>
+</div>
+
+<div class="container" style={{ padding: 0 }}>
+  <hr />
+</div>
+
+<div class="container" style={{ padding: 0 }}>
   <div class="row">
   	<div class="col col--12">
   		<h2>Introduction</h2>
