--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -13,6 +13,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::info Check Back Soon
 
-$MOBILE Announced at Consensus. More details coming soon.
+MOBILE Announced at Consensus. More details coming soon.
 
 :::
