--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak7201.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak7201.mdx
@@ -20,7 +20,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 The RAK7201 WisNode Button 4K is a remote wireless trigger device. It supports user-defined functions for each key and is based on the LoRaWAN 1.0.2 protocol. Supported LoRaWAN bands are IN865, EU868, AU915, US915, KR920, and AS923.
 
-This WisNode Button is suitable for a variety of Smart Home applications: entertainment system control, control of lights, a snooze button for the alarms, or a remote trigger. With long-range wireless connectivity, amazing battery life, and four programmable buttons, there are a ton of applications this device can fit into.
+This WisNode Button is suitable for a variety of Smart Home applications. Including, but not limited to, entertainment system control, control of lights, a snooze button for the alarms,  or a remote trigger. A device with long-range wireless connectivity, amazing battery life, and four programmable buttons. There are a tons of applications this device can fit into.
 
 ### Product Features
 
