Grammar and typo correction & added store link

--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak2171.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak2171.mdx
@@ -38,6 +38,7 @@ RAK2171 supports multiple working modes and notification options. When used with
 
 - [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK2171/Quickstart/)
 - [Datasheet](https://docs.rakwireless.com/Product-Categories/WisNode/RAK2171/Datasheet/)
+- [Store: RAK2171 WisNode TrackIt](https://store.rakwireless.com/products/wisnode-trackit-set-rak2171?utm_source=RAK2171WisNodeTrackIt&utm_medium=Document&utm_campaign=BuyFromStore)
 
 
 ## WisNode TrackIt Helium Integration
