--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak7200.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak7200.mdx
@@ -2,7 +2,7 @@
 id: rak7200
 sidebar_label: RAK7200 WisNode Track Lite
 title: RAK7200 WisNode Track Lite
-description:  The RAK7200 WisNode Track Lite is an LPWAN Tracker device with a 3.7V rechargeable Li-Ion battery and a GPS modem. It is built around low-power LPWAN Module, which integrates the ultra low power STM32L073 micro-controller, the SX1276 LoRa long-range modem, and the CXD5603GF GPS modem. 
+description: The RAK7200 WisNode Track Lite is an LPWAN Tracker device with a 3.7V rechargeable Li-Ion battery and a GPS modem. It is built around low-power LPWAN Module, which integrates the ultra low power STM32L073 micro-controller, the SX1276 LoRa long-range modem, and the CXD5603GF GPS modem. 
 slug: /use-the-network/devices/ready-to-use/rakwireless/rak7200
 ---
 
@@ -28,7 +28,7 @@ This device can be used as a quick prototyping tool for LoRaWAN application deve
 - Supports sleep mode and low-power consumption.
 - Built-in **LIS3DH - digital motion sensor**, which has dynamic user selectable full scales of ±2g/±4g/±8g/±18g and is capable of measuring accelerations with output data rates from 1Hz to 5kHz.
 - Barometer: Built-in **LPS22HB - digital nano pressure sensor**.
-- Built-in **9-Axis Sensor**, which includes a triple-axis gyroscope, a triple-axis accelerom/rak7200/eter, and a triple-axis magnetometer.
+- Built-in **9-Axis Sensor**, which includes a triple-axis gyroscope, a triple-axis accelerometer, and a triple-axis magnetometer.
 - LoRaWAN 1.0.2 Standard support - ABP or OTAA mode.
 - LoRa and GPS antenna are integrated inside the casing.
 - Micro USB for configuration and charging of the battery.
@@ -40,6 +40,7 @@ This device can be used as a quick prototyping tool for LoRaWAN application deve
 - [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7200/Quickstart/)
 - [Datasheet](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7200/Datasheet/)
 - [AT Command Manual](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7200/AT-Command-Manual)
+- [Store: RAK7200 WisNode Track Lite](https://store.rakwireless.com/products/rak7200-lora-tracker?utm_source=RAK7200WisNodeTrackLite&utm_medium=Document&utm_campaign=BuyFromStore)
 
 ## Connecting to Helium (The People's Network)
 
@@ -86,7 +87,7 @@ A window will pop up with a set of fields containing the device parameters requi
   )}
 />
 
-Fill in a name of your choosing. The Dev EUI, App EUI, and App Key will have random values generated for you by default. Press the eye icon to reveal the values. You can manually replace them with values of your own. For this tutorial, default values are used. Press the **Submit** button, and you are done.
+Fill in a name of your choosing. The **Dev EUI**, **App EUI**, and **App Key** will have random values generated for you by default. Press the eye icon to reveal the values. You can manually replace them with values of your own. For this tutorial, default values are used. Press the **Submit** button, and you are done.
 
 <img
   src={useBaseUrl(
@@ -138,7 +139,7 @@ at+set_config=lora:app_key:XXXX
 - Join Network
 
 Finish executing the join command for the node to initiate the join procedure.
-Once the procedure is initiated and completed, you will have a notification in the serial console
+Once the procedure is initiated and completed, you will have a notification in the serial console.
 
 ```
 at+join
