--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak7431.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak7431.mdx
@@ -44,6 +44,7 @@ RAK7431 together with RAK gateway and LoRa Server products, can easily and quick
 - [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7431/Quickstart/)
 - [Datasheet](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7431/Datasheet/)
 - [AT Command Manual](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7431/AT-Command-Manual/)
+- [Store: RAK7431 WisNode Bridge Serial](https://store.rakwireless.com/products/rak7431?utm_source=RAK7431WisNodeBridge&utm_medium=Document&utm_campaign=BuyFromStore)
 
 ## Connecting to Helium (The People's Network)
 
